# langchain-replicate

./: .gitignore  .poutine.yml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.bob/rules-advanced/: AGENTS.md
.bob/rules-agent/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
.github/: dependabot.yml  pinact.yaml  zizmor.yaml
.github/actions/python_setup/: action.yaml  actions.yaml
.github/workflows/: actionlint.yaml  build.yaml  dependabot_merge.yaml
src/langchain_replicate/: __init__.py  _base.py  chat_models.py  embeddings.py  llms.py
tests/: conftest.py  fake_callback_handler.py  test_base.py  test_chat_models.py  test_embeddings.py  test_llms.py
