# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=70.1.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain_replicate"
authors = [{ name = "The IBM Granite Community Team", email = "granite.cookbooks@ibm.com" }]
description = "Improved LangChain integration for Replicate."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "replicate>=1.0.7",
    "langchain_core>=1.2.22",
    "json-repair>=0.30.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ibm-granite-community"
source = "https://github.com/ibm-granite-community/langchain_replicate"
issues = "https://github.com/ibm-granite-community/langchain_replicate/issues"

[dependency-groups]
test = [
    "pytest",
    "pytest_asyncio",
    "assertpy",
    "types-assertpy",
]
pytest = [
    {include-group = "test"},
]
ruff = [
    "ruff",
    {include-group = "test"},
]
pyrefly = [
    "pyrefly",
    {include-group = "test"},
]

[tool.setuptools_scm]
version_file = "src/langchain_replicate/_version.py"
local_scheme = "no-local-version"                   # do not include +gREV local version, required for Test PyPI upload

[tool.tox]
# py3-unit runs unit tests with 'python3'
# py311-unit runs the same tests with 'python3.11'
env_list = [
    "ruff",
    "pyrefly",
    "py3-unit",
]
requires = ["tox>=4.22"]
labels = { lint = ["ruff", "pyrefly"] }

[tool.tox.env_run_base]
description = "Run tests with pytest"
package = "wheel"
wheel_build_env = "pkg"
pass_env = [ "REPLICATE_API_TOKEN" ]
dependency_groups = [
    "pytest",
]
commands = [
    ["{envpython}", "-m", "pytest", { replace = "posargs", default = ["tests"], extend = true }],
]

[tool.tox.env.ruff]
description = "Reformat and fix code with Ruff"
skip_install = true
skip_sdist = true
dependency_groups = [
    "ruff",
]
commands = [
    ["{envpython}", "-m", "ruff", "check", "--fix", { replace = "if", condition = "env.GITHUB_ACTIONS == 'true'", then = ["--output-format=github"], extend = true }],
    ["{envpython}", "-m", "ruff", "format"],
]

[tool.tox.env.ruffcheck]
description = "Check code with Ruff"
skip_install = true
skip_sdist = true
dependency_groups = [
    "ruff",
]
commands = [
    ["{envpython}", "-m", "ruff", "check", "--diff", { replace = "if", condition = "env.GITHUB_ACTIONS == 'true'", then = ["--output-format=github"], extend = true }],
    ["{envpython}", "-m", "ruff", "format", "--check"],
]

[tool.tox.env.pyrefly]
description = "Python type checking with pyrefly"
dependency_groups = [
    "pyrefly",
]
commands = [
    ["{envpython}", "-m", "pyrefly", { replace = "posargs", default = ["check"], extend = true }, { replace = "if", condition = "env.GITHUB_ACTIONS == 'true'", then = ["--output-format=github"], extend = true }],
]

[tool.tox.gh.python]
"3.13" = ["py313-unit"]
"3.12" = ["py312-unit"]
"3.11" = ["py311-unit"]
"3.10" = ["py310-unit"]

[tool.pyrefly]
project-includes = ["src", "tests"]
project-excludes = ["**/src/langchain_replicate/_version.py"]
python-version = "3.10"
preset = "strict"

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["src/langchain_replicate/_version.py"]
line-length = 180

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "Q",   # flake8-quotes
    "I",   # isort
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
